...
    android:layout_marginBottom="0dp"
    android:elevation="@dimen/card_elevation"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/source_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/default_margin">

...
